test/libsolidity/syntaxTests/freeFunctions/free_function_without_body.sol
function f();
// ----
// TypeError 4668: (0-13): Free functions must be implemented.
